--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,8 @@ build-backend = "setuptools.build_meta"
 [tool.pytest.ini_options]
 pythonpath = ["src"]
 addopts = "-ra"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+]
